# sklearn2excel

./: .gitignore  LICENCE  LICENSE  README.md  pyproject.toml  requirements.txt
sklearn2excel/: __init__.py  core.py  helpers.py
tests/: helpers.py  randomforest_test.txt  test_1.py
